# seeclaw

./: .gitignore  Cargo.toml  LICENCE  README.md  config copy.toml  config.toml  main.py  package-lock.json  pyproject.toml  tauri.conf.json
.claude/: settings.local.json
.cursor/arch/: system-design.md
.cursor/plans/: plan.md
.cursor/rules/: 00-global.md  01-rust-backend-rules.md  02-ui-ux-rules.md  03-git-flow-rules.md  04-persistence-streaming.md
.cursor/skills/: skill-joy-ui-customization.md  skill-onnx-vision-rust.md  skill-rust-state-machine.md  skill-som-grid-prompt.md
.cursor/skills/dpi-coordinate-mapping/: SKILL.md
.cursor/skills/glm-llm-sse-client/: SKILL.md
.cursor/skills/joy-ui-cyberpunk-theme/: SKILL.md
.cursor/skills/onnx-vision-rust/: SKILL.md
capabilities/: default.json
docs/: ARCHITECTURE_IMPROVEMENTS.md  DEPLOYMENT.md  arch.md  temp.md
models/: README.md
prompts/: README.md
prompts/skills/: list.md
prompts/system/: agent_system.md  chat_agent.md  experience_summary.md  planner.md  router.md  simple_chat.md  simple_exec.md  summarizer.md  tools_agent.md  verifier.md  visual_router.md  vlm_annotated.md  vlm_grid.md
prompts/tools/: builtin.json  mcp_template.json
scripts/: build-release.ps1  build.ps1  dev.ps1  download_gui_detector.py  export_yolo_onnx.py  lint.ps1  test-ui.ps1
src/: commands.rs  config.rs  errors.rs  lib.rs  main.rs
src-ui/: index.html  package-lock.json  package.json  vite.config.ts
src-ui/src/: App.tsx  index.css  main.tsx
src-ui/src/theme/: index.ts
src/agent_engine/: context.rs  engine.rs  event_bus.rs  flow.rs  graph.rs  history.rs  loop_control.rs  mod.rs  node.rs  state.rs  tool_parser.rs
src/executor/: coordinator.rs  dispatcher.rs  input.rs  mod.rs  safety.rs  text_input.rs
src/llm/: mod.rs  provider.rs  registry.rs  sse_parser.rs  tools.rs  types.rs
src/mcp/: client.rs  mod.rs  stdio_transport.rs  transport.rs
src/perception/: annotator.rs  focus_crop.rs  mod.rs  pipeline.rs  screenshot.rs  som_grid.rs  stability.rs  traits.rs  types.rs  ui_automation.rs  yolo_detector.rs
src/rag/: embedder.rs  experience.rs  index.rs  mod.rs
src/skills/: loader.rs  manager.rs  mod.rs  registry.rs  types.rs
(+64 files in other folders)
